[gd_scene load_steps=34 format=3 uid="uid://5o6wuyan4l24"]

[ext_resource type="Texture2D" uid="uid://dtycmtyhq5h4p" path="res://assets/environment/scifi/scifi_4c1a.png" id="1_h1in7"]
[ext_resource type="Texture2D" uid="uid://bsqidby5di0pq" path="res://assets/environment/scifi/door_opening.png" id="2_81082"]
[ext_resource type="Texture2D" uid="uid://ly3i0x71f4s4" path="res://assets/environment/scifi/door_opening1.png" id="2_ejhu8"]
[ext_resource type="Script" path="res://exitdoorgen.gd" id="3_6r4ce"]
[ext_resource type="Texture2D" uid="uid://duuifkqgq4m4t" path="res://assets/environment/light.png" id="4_eprki"]
[ext_resource type="Script" path="res://scene/levels/exitdoorarea2D.gd" id="5_ftkun"]
[ext_resource type="Texture2D" uid="uid://cpix2rb6xo8d" path="res://assets/environment/scifi/anims/itemroom.png" id="6_efi4h"]
[ext_resource type="Texture2D" uid="uid://dopdmojaxerof" path="res://assets/environment/scifi/anims/mysteryroom.png" id="7_r5x27"]
[ext_resource type="Texture2D" uid="uid://e2ew3ao7n4w4" path="res://assets/environment/scifi/anims/coinroom.png" id="8_60gkh"]
[ext_resource type="Texture2D" uid="uid://c4rb7j1gw3ae5" path="res://assets/environment/scifi/anims/fightroom.png" id="9_1cl3e"]
[ext_resource type="PackedScene" uid="uid://tx0k8w40l0k3" path="res://roomdeterminator.tscn" id="10_18ww2"]
[ext_resource type="Texture2D" uid="uid://cmiwbcivicski" path="res://assets/environment/scifi/anims/meeting_room.png" id="10_rikax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qnrfv"]
atlas = ExtResource("1_h1in7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7qgc"]
atlas = ExtResource("2_ejhu8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00v86"]
atlas = ExtResource("2_81082")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w67bj"]
atlas = ExtResource("2_81082")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjouh"]
atlas = ExtResource("2_81082")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3cbc"]
atlas = ExtResource("2_81082")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb0ic"]
atlas = ExtResource("2_81082")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsja5"]
atlas = ExtResource("2_81082")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dsa4"]
atlas = ExtResource("2_81082")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfcfj"]
atlas = ExtResource("2_81082")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_durlr"]
atlas = ExtResource("2_81082")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lled4"]
atlas = ExtResource("2_ejhu8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tf03"]
atlas = ExtResource("2_ejhu8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u12wt"]
atlas = ExtResource("2_ejhu8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w2il"]
atlas = ExtResource("2_ejhu8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jb3q"]
atlas = ExtResource("2_ejhu8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu4r1"]
atlas = ExtResource("2_ejhu8")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmodf"]
atlas = ExtResource("2_ejhu8")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o04m"]
atlas = ExtResource("2_ejhu8")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tcadn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnrfv")
}],
"loop": true,
"name": &"closed",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7qgc")
}],
"loop": true,
"name": &"closed_white",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00v86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w67bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjouh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3cbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb0ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsja5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dsa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfcfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_durlr")
}],
"loop": false,
"name": &"open",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7qgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lled4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u12wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w2il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jb3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu4r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmodf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o04m")
}],
"loop": false,
"name": &"open_white",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbvjj"]
size = Vector2(41, 57)

[node name="exitdoor" type="AnimatedSprite2D" groups=["interact"]]
position = Vector2(808, -105)
sprite_frames = SubResource("SpriteFrames_tcadn")
animation = &"closed"
script = ExtResource("3_6r4ce")

[node name="door_light" type="Node2D" parent="."]
z_index = 1
position = Vector2(0, -26)

[node name="TextureLight" type="PointLight2D" parent="door_light"]
color = Color(0.84812, 0.208988, 0.918914, 1)
energy = 0.1
range_layer_min = -100
range_item_cull_mask = 515
shadow_filter = 1
shadow_filter_smooth = 20.9
shadow_item_cull_mask = 515
texture = ExtResource("4_eprki")
texture_scale = 0.2

[node name="Shadow" type="PointLight2D" parent="door_light"]
color = Color(0.84812, 0.208988, 0.918914, 1)
energy = 0.25
range_layer_min = -100
range_item_cull_mask = 515
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 20.9
shadow_item_cull_mask = 515
texture = ExtResource("4_eprki")
texture_scale = 0.1

[node name="Area2D" type="Area2D" parent="." groups=["interact"]]
position = Vector2(1, 1)
collision_mask = 16
script = ExtResource("5_ftkun")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(248, 197.5)
shape = SubResource("RectangleShape2D_bbvjj")

[node name="Itemroom" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.709804)
position = Vector2(0.386475, -38.6434)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_efi4h")

[node name="Mysteryroom" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.709804)
position = Vector2(0.601074, -38.6261)
scale = Vector2(0.145, 0.145)
texture = ExtResource("7_r5x27")

[node name="Coinroom" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.709804)
position = Vector2(0.550781, -38.5707)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_60gkh")

[node name="Fightroom" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.709804)
position = Vector2(0.343506, -38.7691)
scale = Vector2(0.22, 0.22)
texture = ExtResource("9_1cl3e")

[node name="Meetingroom" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.709804)
position = Vector2(0.197266, -38.8315)
scale = Vector2(0.154822, 0.157951)
texture = ExtResource("10_rikax")

[node name="Roomdeterminator" parent="." instance=ExtResource("10_18ww2")]

[connection signal="opendoor" from="Area2D" to="." method="_on_area_2d_opendoor" flags=18]
